@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,6 @@ import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
-import java.security.AccessControlContext;
 import java.security.ProtectionDomain;
 import java.util.List;
 import java.util.Map;
@@ -114,11 +113,22 @@ public interface JavaLangAccess {
     byte[] getRawExecutableTypeAnnotations(Executable executable);
 
     /**
+     * Get the int value of the Class's class-file access flags.
+     */
+    int getClassFileAccessFlags(Class<?> klass);
+
+    /**
      * Returns the elements of an enum class or null if the
      * Class object does not represent an enum type;
      * the result is uncloned, cached, and shared by all callers.
      */
     <E extends Enum<E>> E[] getEnumConstantsShared(Class<E> klass);
+
+    /**
+     * Returns the big-endian packed minor-major version of the class file
+     * of this class.
+     */
+    int classFileVersion(Class<?> clazz);
 
     /**
      * Set current thread's blocker field.
@@ -143,12 +153,6 @@ public interface JavaLangAccess {
      *         the slot is not valid to register.
      */
     void registerShutdownHook(int slot, boolean registerShutdownInProgress, Runnable hook);
-
-    /**
-     * Returns a new Thread with the given Runnable and an
-     * inherited AccessControlContext.
-     */
-    Thread newThreadWithAcc(Runnable target, @SuppressWarnings("removal") AccessControlContext acc);
 
     /**
      * Invokes the finalize method of the given object.
@@ -183,16 +187,6 @@ public interface JavaLangAccess {
      * Define a Package of the given name and module by the given class loader.
      */
     Package definePackage(ClassLoader cl, String name, Module module);
-
-    /**
-     * Record the non-exported packages of the modules in the given layer
-     */
-    void addNonExportedPackages(ModuleLayer layer);
-
-    /**
-     * Invalidate package access cache
-     */
-    void invalidatePackageAccessCache();
 
     /**
      * Defines a new module to the Java virtual machine. The module
@@ -246,11 +240,6 @@ public interface JavaLangAccess {
      * Updates module m to open a package to all unnamed modules.
      */
     void addOpensToAllUnnamed(Module m, String pkg);
-
-    /**
-     * Updates module m to open all packages in the given sets.
-     */
-    void addOpensToAllUnnamed(Module m, Set<String> concealedPkgs, Set<String> exportedPkgs);
 
     /**
      * Updates module m to use a service.
@@ -318,6 +307,8 @@ public interface JavaLangAccess {
 
     /**
      * Count the number of leading positive bytes in the range.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      */
     int countPositives(byte[] ba, int off, int len);
 
@@ -327,37 +318,40 @@ public interface JavaLangAccess {
     int countNonZeroAscii(String s);
 
     /**
-     * Constructs a new {@code String} by decoding the specified subarray of
-     * bytes using the specified {@linkplain java.nio.charset.Charset charset}.
-     *
-     * The caller of this method shall relinquish and transfer the ownership of
-     * the byte array to the callee since the later will not make a copy.
+     * Constructs a new {@code String} by decoding the specified byte array
+     * using the specified {@linkplain java.nio.charset.Charset charset}.
+     * <p>
+     * <b>WARNING: The caller of this method shall relinquish and transfer the
+     * ownership of the byte array to the callee</b>, since the latter will not
+     * make a copy.
      *
      * @param bytes the byte array source
      * @param cs the Charset
      * @return the newly created string
      * @throws CharacterCodingException for malformed or unmappable bytes
      */
-    String newStringNoRepl(byte[] bytes, Charset cs) throws CharacterCodingException;
+    String uncheckedNewStringNoRepl(byte[] bytes, Charset cs) throws CharacterCodingException;
 
     /**
-     * Encode the given string into a sequence of bytes using the specified Charset.
-     *
-     * This method avoids copying the String's internal representation if the input
-     * is ASCII.
-     *
-     * This method throws CharacterCodingException instead of replacing when
-     * malformed input or unmappable characters are encountered.
+     * Encode the given string into a sequence of bytes using the specified
+     * {@linkplain java.nio.charset.Charset charset}.
+     * <p>
+     * <b>WARNING: This method returns the {@code byte[]} backing the provided
+     * {@code String}, if the input is ASCII. Hence, the returned byte array
+     * must not be modified.</b>
+     * <p>
+     * This method throws {@code CharacterCodingException} instead of replacing
+     * when malformed input or unmappable characters are encountered.
      *
      * @param s the string to encode
      * @param cs the charset
      * @return the encoded bytes
      * @throws CharacterCodingException for malformed input or unmappable characters
      */
-    byte[] getBytesNoRepl(String s, Charset cs) throws CharacterCodingException;
+    byte[] uncheckedGetBytesNoRepl(String s, Charset cs) throws CharacterCodingException;
 
     /**
-     * Returns a new string by decoding from the given utf8 bytes array.
+     * Returns a new string by decoding from the given UTF-8 bytes array.
      *
      * @param off the index of the first byte to decode
      * @param len the number of bytes to decode
@@ -367,23 +361,27 @@ public interface JavaLangAccess {
     String newStringUTF8NoRepl(byte[] bytes, int off, int len);
 
     /**
-     * Get the char at index in a byte[] in internal UTF-16 representation,
-     * with no bounds checks.
+     * Get the {@code char} at {@code index} in a {@code byte[]} in internal
+     * UTF-16 representation.
+     * <p>
+     * <b>WARNING: This method does not perform any bound checks.</b>
      *
      * @param bytes the UTF-16 encoded bytes
      * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
      * @return the char value
      */
-    char getUTF16Char(byte[] bytes, int index);
+    char uncheckedGetUTF16Char(byte[] bytes, int index);
 
     /**
-     * Put the char at index in a byte[] in internal UTF-16 representation,
-     * with no bounds checks.
+     * Put the {@code ch} at {@code index} in a {@code byte[]} in internal
+     * UTF-16 representation.
+     * <p>
+     * <b>WARNING: This method does not perform any bound checks.</b>
      *
      * @param bytes the UTF-16 encoded bytes
      * @param index of the char to retrieve, 0 <= index < (bytes.length >> 1)
      */
-    void putCharUTF16(byte[] bytes, int index, int ch);
+    void uncheckedPutCharUTF16(byte[] bytes, int index, int ch);
 
     /**
      * Encode the given string into a sequence of bytes using utf8.
@@ -395,13 +393,18 @@ public interface JavaLangAccess {
     byte[] getBytesUTF8NoRepl(String s);
 
     /**
-     * Inflated copy from byte[] to char[], as defined by StringLatin1.inflate
+     * Inflated copy from {@code byte[]} to {@code char[]}, as defined by
+     * {@code StringLatin1.inflate}.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      */
     void inflateBytesToChars(byte[] src, int srcOff, char[] dst, int dstOff, int len);
 
     /**
      * Decodes ASCII from the source byte array into the destination
      * char array.
+     *
+     * @implSpec Implementations of this method must perform bounds checks.
      *
      * @return the number of bytes successfully decoded, at most len
      */
@@ -419,13 +422,15 @@ public interface JavaLangAccess {
     PrintStream initialSystemErr();
 
     /**
-     * Encodes ASCII codepoints as possible from the source array into
+     * Encodes as many ASCII codepoints as possible from the source array into
      * the destination byte array, assuming that the encoding is ASCII
-     * compatible
+     * compatible.
+     * <p>
+     * <b>WARNING: This method does not perform any bound checks.</b>
      *
      * @return the number of bytes successfully encoded, or 0 if none
      */
-    int encodeASCII(char[] src, int srcOff, byte[] dst, int dstOff, int len);
+    int uncheckedEncodeASCII(char[] src, int srcOff, byte[] dst, int dstOff, int len);
 
     /**
      * Set the cause of Throwable
@@ -458,7 +463,14 @@ public interface JavaLangAccess {
      */
     long stringConcatMix(long lengthCoder, char value);
 
-    Object stringConcat1(String[] constants);
+    /**
+     * Creates helper for string concatenation.
+     * <p>
+     * <b>WARNING: The caller of this method shall relinquish and transfer the
+     * ownership of the string array to the callee</b>, since the latter will not
+     * make a copy.
+     */
+    Object uncheckedStringConcat1(String[] constants);
 
     /**
      * Get the string initial coder, When COMPACT_STRINGS is on, it returns 0, and when it is off, it returns 1.
@@ -487,21 +499,11 @@ public interface JavaLangAccess {
      */
     Object classData(Class<?> c);
 
-    int getCharsLatin1(long i, int index, byte[] buf);
-
-    int getCharsUTF16(long i, int index, byte[] buf);
-
     /**
      * Returns the {@link NativeLibraries} object associated with the provided class loader.
      * This is used by {@link SymbolLookup#loaderLookup()}.
      */
     NativeLibraries nativeLibrariesFor(ClassLoader loader);
-
-    /**
-     * Direct access to Shutdown.exit to avoid security manager checks
-     * @param statusCode the status code
-     */
-    void exit(int statusCode);
 
     /**
      * Returns an array of all platform threads.
@@ -548,12 +550,6 @@ public interface JavaLangAccess {
      * Removes the value of the current carrier thread's copy of a thread-local.
      */
     void removeCarrierThreadLocal(CarrierThreadLocal<?> local);
-
-    /**
-     * Returns {@code true} if there is a value in the current carrier thread's copy of
-     * thread-local, even if that values is {@code null}.
-     */
-    boolean isCarrierThreadLocalPresent(CarrierThreadLocal<?> local);
 
     /**
      * Returns the current thread's scoped values cache
@@ -633,10 +629,4 @@ public interface JavaLangAccess {
      * Are the string bytes compatible with the given charset?
      */
     boolean bytesCompatible(String string, Charset charset);
-
-    /**
-     * Is a security manager already set or allowed to be set
-     * (using -Djava.security.manager=allow)?
-     */
-    boolean allowSecurityManager();
 }
