@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 6402062 6487891
  * @summary Tests DefaultCellEditor encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_DefaultCellEditor
+ * @run main/othervm javax_swing_DefaultCellEditor
  * @author Sergey Malenkov
  */
 
@@ -36,7 +36,7 @@ import javax.swing.text.JTextComponent;
 
 public final class javax_swing_DefaultCellEditor extends AbstractTest<DefaultCellEditor> {
     public static void main(String[] args) {
-        new javax_swing_DefaultCellEditor().test(true);
+        new javax_swing_DefaultCellEditor().test();
     }
 
     protected DefaultCellEditor getObject() {
