@@ -45,7 +45,7 @@
  * bench.rmi.IntCalls bench.rmi.ClassLoading bench.rmi.LongArrayCalls
  * bench.rmi.ShortArrayCalls
  * bench.rmi.altroot.Node
- * @run main/othervm/policy=policy.all/timeout=1800 bench.rmi.Main -server -c config
+ * @run main/othervm/timeout=1800 bench.rmi.Main -server -c config
  * @author Mike Warres, Nigel Daley
  */
 
@@ -214,7 +214,6 @@ public class Main {
      * @param args
      */
     public static void main(String[] args) {
-        setupSecurity();
         parseArgs(args);
         setupStreams();
         if (list) {
@@ -239,8 +238,6 @@ public class Main {
                     //Setup for client mode, server will fork client process
                     //after its initiation.
                     List<String> clientProcessStr = new ArrayList<>();
-                    clientProcessStr.add("-Djava.security.policy=" + TEST_SRC_PATH + "policy.all");
-                    clientProcessStr.add("-Djava.security.manager=allow");
                     clientProcessStr.add("-Dtest.src=" + TEST_SRC_PATH);
                     clientProcessStr.add("bench.rmi.Main"); //Client mode
                     if (verbose) {
@@ -396,22 +393,6 @@ public class Main {
                     die("Illegal option: \"" + args[i] + "\"");
             }
         }
-    }
-
-    /**
-     * Set up security manager and policy, if not set already.
-     */
-    static void setupSecurity() {
-        if (System.getSecurityManager() != null) {
-            return;
-        }
-
-        /* As of 1.4, it is too late to set the security policy
-         * file at this point so these line have been commented out.
-         */
-        //System.setProperty("java.security.policy",
-        //      Main.class.getResource("/bench/rmi/policy.all").toString());
-        System.setSecurityManager(new SecurityManager());
     }
 
     /**
